# Spite

./: .pre-commit-config.yaml  AGENTS.md  AGENT_INSTRUCTIONS.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_PLAN.md  README.md  REQUIREMENTS.md  RESEARCH.md  SOURCES.md  TESTING.md  USER_GUIDE.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: tooling_evaluation.md
plans/: spite_implementation_plan.md
prompts/: spite_implementation_prompt.md
reports/: spite_implementation_report.md
src/spite/: __init__.py  analyzer.py  generator.py  ingest.py  llm.py  main.py  main.py.orig  main.py.rej  packager.py  stream.py
src/templates/: index.html
tests/: test_analyzer.py  test_generator.py  test_ingest.py  test_packager.py
